--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph (Tampilan saat dibagikan di Facebook/WhatsApp) -->
     <meta property="og:title" content="Call Center Ajaib 24 Jam | Nomor & Bantuan Pelanggan">
     <meta property="og:description" content="Hubungi Call Center Ajaib 24 Jam di nomor WhatsApp 0851-2111-2667 untuk layanan pelanggan, bantuan transaksi, dan solusi kendala akun Ajaib.">
-    <meta property="og:image" content="https://example.com/logo-ajaib.png">
+    <meta property="og:image" content="https://media-hosting.imagekit.io//681a5b05edff4cfa/cropped-Ajaib_New-Logo_Icon-Apps-512px.png?Expires=1835351567&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=whVHcV1UzL2IXjCHAkiiheVWg3kZ6ijm3BkQOdgFTGVN5Pr8jTLqRjoQV5XVXoZTKJ83E~WT-xgy7OZhM7DNZtu7RgxAtu-NroVQMp02iGquYPFP08c~bnQAdQdwuogJA5IAIxbd7we88lhw3BJyQZ33BIJFpba0BLvF5eYG68uv47l8gDrvizqYLfWw7KO-PKFTU2H0kX-RE9xlgmzGijQFLCr28oqsd3UuUV4eH8TNzUu9cjE5uk7XwZn7CjtBm0SVS8DmOSDsHXCw1N-NQJPiNH11-8FO-~FrPzHiUsahMvX05I6FosC-ErsNc8m8JwohzUnQBybSSvo1djoQsA__">
     <meta property="og:url" content="https://example.com/call-center-ajaib">
 
     <!-- Twitter Card -->
