--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="2P-uhqW4AKXEg5I2v5vhV4d2lrPpPz_r2OvILXn7g2o" />
     <meta name="msvalidate.01" content="D36156C7B8DEB28805B496B135224BB6" />
+    <meta name="google-site-verification" content="2P-uhqW4AKXEg5I2v5vhV4d2lrPpPz_r2OvILXn7g2o" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Call Center Ajaib 24 Jam: Hubungi nomor WhatsApp Ajaib 0851-2111-2667 untuk layanan pelanggan, bantuan akun, transaksi, dan investasi.">
     <meta name="keywords" content="Call Center Ajaib, Nomor WhatsApp Ajaib, CS Ajaib 24 Jam, Live Chat Ajaib, Bantuan Ajaib, Customer Service Ajaib">
